# bsr

./: ChangeLog.md
src/: CMakeLists.txt  old_cmake.txt
src/bsr/: CMakeLists.txt
src/bsr/BSR_BMAT/: CMakeLists.txt  add_res.f90  alloc_orb_overlaps.f90
src/bsr/BSR_BREIT/: CMakeLists.txt  MOD_bsr_breit.f90  cache_data.f90  conf_loop.f90  send_results_mpi.f90  term_loop.f90
src/bsr/BSR_BREIT/BSR_BREIT3/: bsr_breit.f90  read_conf.f90
src/bsr/BSR_BREIT/BSR_BREIT4/: BSR_BREIT.f90  CMakeLists.txt
src/bsr/BSR_BREIT/BSR_BREIT4_MPI/: CMakeLists.txt  bsr_breit_mpi.f90
src/bsr/BSR_BREIT/combined_BREIT4/: CMakeLists.txt  MOD_bsr_breit.f90  add_res.f90  add_res_mpi.f90  bsr_breit.f90  bsr_breit_mpi.f90  bsr_breit_mpi_new.f90  cache_data.f90  conf_calc_mpi.f90  conf_calc_mpi_new.f90  conf_loop.f90  conf_loop_mpi_new.f90  receive_data_mpi.f90  receive_results_mpi.f90  send_data_mpi.f90  send_results_mpi.f90  term_loop.f90
src/bsr/BSR_CONF/: CMakeLists.txt  bsr_conf.f90  bsr_conf_mpi.f90  def_phys_targ.f90  read_orth.f90
src/bsr/BSR_DMAT/: CMakeLists.txt  alloc_orb_overlaps.f90  d_data.f90  r_conf.f90
src/bsr/BSR_DMAT4/: CMakeLists.txt  bsr_dmat.f90  r_conf.f90
src/bsr/BSR_HD/: CMakeLists.txt  diag_hd.f90
src/bsr/BSR_HD4/: h_out.f90
src/bsr/BSR_HDB4/: CMakeLists.txt
src/bsr/BSR_MAT/: CMakeLists.txt  alloc_orb_overlaps.f90  bsr_mat_mpi.f90  bsr_mat_mpi_new.f90  check_mat_mpi.f90  get_v.f90  get_v_mpi.f90  record_matrix-keegan.f90  record_matrix.f90  state_res_mpi.f90
src/bsr/BSR_MAT4/: CMakeLists.txt  bs_orth.f90  bsr_mat_mpi.f90  bsr_mat_mpi_new.f90  get_v.f90  read_data.f90  read_matrix_mpi.f90  record_matrix_mpi.f90  state_res_mpi.f90  sub1.f90  sub1_mpi.f90  sub1_mpi_new.f90
src/bsr/BSR_MULT/: CMakeLists.txt  bsr_mult.f90  mod_param_mpi.f90
src/bsr/BSR_MULT/mult4/: CMakeLists.txt  mult.f90
src/bsr/BSR_MULT/mult4_mpi/: CMakeLists.txt
src/bsr/BSR_PHOT/: CMakeLists.txt  br_arg.f90  bsr_phot.f90
src/bsr/BSR_POL/: CMakeLists.txt  allocate_bsorb_old.f90  read_bsrmat.f90
src/bsr/BSR_POL3/: CMakeLists.txt  mod_pol.f90  read_bsrmat.f90  read_data.f90  solv_mat.f90
src/bsr/BSR_PREP/: CMakeLists.txt  add_sub_orbital.f90
src/bsr/BSR_PREP3/: add_sub_orbital.f90  assign_index.f90  sub_check_orb.f90  sub_phys_orb.f90  sub_phys_pert.f90
src/bsr/BSR_RECOUP/: CMakeLists.txt
src/bsr/BSR_UTILS/: CMakeLists.txt  bs_hwf.f90  bsr_dd.f90  photo_collect.f90  sec_top_TM.f90  zf_bb_bsr.f90  zf_cc_bsr.f90
src/dbsr/: CMakeLists.txt
src/dbsr/DBSR_BREIT/: CMakeLists.txt
src/dbsr/DBSR_BREIT3_MPI/: open_jj.f90
src/dbsr/DBSR_CI/: CMakeLists.txt
src/dbsr/DBSR_CONF/: CMakeLists.txt  dbsr_conf_mpi.f90
src/dbsr/DBSR_CONF3/: CMakeLists.txt
src/dbsr/DBSR_DMAT/: CMakeLists.txt
src/dbsr/DBSR_DMAT3/: CMakeLists.txt
src/dbsr/DBSR_HD/: CMakeLists.txt
src/dbsr/DBSR_HD_MPI/: CMakeLists.txt
src/dbsr/DBSR_HF/: dbsr_lib_zcom.f90
src/dbsr/DBSR_MAT/: CMakeLists.txt  br_radial_overlaps.f90
src/dbsr/DBSR_MAT3_MPI/: CMakeLists.txt  MOD_c_data.f90  br_radial_overlaps.f90  check_mat.f90  mod_dbsr_mat.f90  read_data.f90  sub1.f90  sub1_mpi.f90  transform_matrix.f90
src/dbsr/DBSR_MULT/: CMakeLists.txt  dbsr_mult.f90
src/dbsr/DBSR_POL/: CMakeLists.txt
src/dbsr/DBSR_POL3/: CMakeLists.txt  read_data.f90
src/dbsr/DBSR_PREP/: CMakeLists.txt
src/dbsr/DBSR_UTILS/: CMakeLists.txt  coef_jj.f90  dbsw_tab-old.f90  dbsw_tab.f90
src/dbsr/DBSR_jj2ls/: CMakeLists.txt
src/libs/BS/: CMakeLists.txt
src/libs/BSR_MPI_LIB/: CMakeLists.txt  br_ovl.f90  br_target.f90
src/libs/DBS/: DBS_orbitals_pq.f90  DBS_orbitals_pq_old.f90
src/libs/ZCOM/: CMakeLists.txt  LAPACK_calls_hack.f90  MOD_obs-temp.f90  MOD_obs_new.f90  MOD_orb_overlaps.f90  ndet_fact.f90  stop_mp.F90  xAy.f90
src/libs/ZCONFJJ/: EL_nljk.f90
src/libs/ZCONFLS/: CMakeLists.txt  MOD_param_LS.f90  r_orth.f90
src/libs_04/BS/: CMakeLists.txt  facsb.f90  spline_orbitals.f90
src/libs_04/BSR_MPI_LIB/: CMakeLists.txt  br_bsorb.f90  br_ovl.f90  br_phys_orb.f90  br_target.f90
src/libs_04/DBS/: CMakeLists.txt
src/libs_04/ZCOM/: CMakeLists.txt  LAPACK_calls_hack.F90  MOD_coef.f90  MOD_det.f90  MOD_obs_new.f90  MOD_orb_overlaps.f90  check_det_new.f90
src/libs_04/ZCONFJJ/: CMakeLists.txt
src/libs_04/ZCONFLS/: CMakeLists.txt  MOD_conf_LS.f90  MOD_symc.f90  MOD_symt.f90  det_orbitals.f90  idet_fact.f90
